test/src/e2e_vm_tests/test_programs/should_fail/import_non_item/src/my_internal_mod.sw
library;

fn foo() -> u32 {
    42
}
